fixed project pages

--- a/project-2.html
+++ b/project-2.html
@@ -7,9 +7,6 @@
       name="description"
       content="Work portfolio for Vancouver-based graphic design student Caroline Zhang featuring branding and illustration pieces."
     />
-    name="description" content="When writing a meta description, keep it between
-    140 and 160 characters so Google can display your entire message. Don’t
-    forget to include your keyword!" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -26,7 +23,9 @@
   <body class="project-2">
     <header class="hero-header">
       <ul class="branding-navigation">
-        <li><a href="work.html" class="custom-navigation">Work</a></li>
+        <li class="project-nav">
+          <a href="work.html">Work</a>
+        </li>
         <li class="logo-on-white">
           <a href="work.html">
             <svg
@@ -55,7 +54,7 @@
             </svg>
           </a>
         </li>
-        <li><a href="about.html" class="custom-navigation">About</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </header>
     <div class="project-wrapper">
@@ -86,7 +85,7 @@
             ></a>
           </li>
           <li class="arrow">
-            <a href="#" class="navigation-arrow"
+            <a href="project-3.html" class="navigation-arrow"
               ><i class="fas fa-arrow-right fa-2x"></i
             ></a>
           </li>
@@ -94,19 +93,12 @@
       </aside>
       <main class="project-details">
         <div class="project-image">
-          <span class="large-emoji-placeholder">🐸</span>
-        </div>
-        <div class="project-image">
-          <span class="large-emoji-placeholder">🌼</span>
-        </div>
-        <div class="project-image">
-          <span class="large-emoji-placeholder">🌵</span>
-        </div>
-        <div class="project-image">
-          <span class="large-emoji-placeholder">✨</span>
-        </div>
-        <div class="project-image">
-          <span class="large-emoji-placeholder">🕷</span>
+          <img
+            src="assets/images/caroline-zhang-keycap-packaging-design-photography.jpg"
+            width="1000"
+            height="1000"
+            alt="A description of the image"
+          />
         </div>
       </main>
     </div>
