--- a/project-3.html
+++ b/project-3.html
@@ -23,7 +23,9 @@
   <body class="project-2">
     <header class="hero-header">
       <ul class="branding-navigation">
-        <li><a href="work.html" class="custom-navigation">Work</a></li>
+        <li class="project-nav">
+          <a href="work.html">Work</a>
+        </li>
         <li class="logo-on-white">
           <a href="work.html">
             <svg
@@ -52,7 +54,7 @@
             </svg>
           </a>
         </li>
-        <li><a href="about.html" class="custom-navigation">About</a></li>
+        <li><a href="about.html">About</a></li>
       </ul>
     </header>
     <div class="project-wrapper">
@@ -78,19 +80,12 @@
       </aside>
       <main class="project-details">
         <div class="project-image">
-          <span class="large-emoji-placeholder">🐸</span>
-        </div>
-        <div class="project-image">
-          <span class="large-emoji-placeholder">🌼</span>
-        </div>
-        <div class="project-image">
-          <span class="large-emoji-placeholder">🌵</span>
-        </div>
-        <div class="project-image">
-          <span class="large-emoji-placeholder">✨</span>
-        </div>
-        <div class="project-image">
-          <span class="large-emoji-placeholder">🕷</span>
+          <img
+            src="assets/images/caroline-zhang-bubble-tea-drink-can-design-transit-advertisement-campaign.jpg"
+            width="1000"
+            height="1000"
+            alt="A description of the image"
+          />
         </div>
       </main>
     </div>
