--- a/work.html
+++ b/work.html
@@ -19,6 +19,10 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="./styles/style.css" />
+    <meta
+      name="google-site-verification"
+      content="x5iHZ0rHDRQv8GHGUWKGifYOPvqenHwCqcj5Qej7vkU"
+    />
   </head>
 
   <body class="work-page">
