--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
           based in Vancouver. Right now I’m a third year student in the IDEA
           School of Design with a focus on branding and a smattering of
           illustration. Research and analysis is where I feel at home—if you’ve
-          got a question or a problem I’m your guy. My interests are as vast and
+          got a question or a problem I’m your guy. My interests are vast and
           varied but my one true love is video games. I go from grinding at work
           to grinding levels virtually so efficiency is my key to success. I
           live next to computers so feel free to reach out and I’ll get back to
