fix bio and copywrite

--- a/about.html
+++ b/about.html
@@ -72,12 +72,14 @@
           Hi there, I’m Caroline, a graphic designer and overall big thinker
           based in Vancouver. Right now I’m a third year student in the IDEA
           School of Design with a focus on branding and a smattering of
-          illustration. Research and analysis is where I feel at home—if you’ve
-          got a question or a problem I’m your guy. My interests are vast and
-          varied but my one true love is video games. I go from grinding at work
-          to grinding levels virtually so efficiency is my key to success. I
-          live next to computers so feel free to reach out and I’ll get back to
-          you as soon as I can (after one more game).
+          illustration and UX. Research and analysis is where I feel at home—if
+          you’ve got a question or a problem I’m your guy.
+        </p>
+        <p class="about-desc">
+          My interests are vast and varied but my one true love is video games.
+          I go from grinding at work to grinding levels virtually so efficiency
+          is my key to success. I live next to computers so feel free to reach
+          out and I’ll get back to you as soon as I can (after one more game).
         </p>
         <h3>Testimonials</h3>
         <p>"One of the greatest minds I know."</p>
@@ -103,7 +105,7 @@
       </li>
       <li class="about-item-4">
         <p class="fineprint">
-          &copy; 2024-2026. Coded frantically by yours truly.
+          &copy; 2024-2026. Coded frantically by Caroline Zhang.
         </p>
       </li>
     </ul>
