--- a/work.html
+++ b/work.html
@@ -126,6 +126,48 @@
               </div>
             </a>
           </li>
+          <li class="work-page-grid-item">
+            <figure>
+              <img
+                src="assets/images/caroline-zhang-foundry-rebrand-poster-design-mockup.jpg"
+                alt="Describe your project"
+              />
+            </figure>
+            <a href="project-4.html">
+              <div class="overlay">
+                <h1 class="overlay-title">Foundry Refresh</h1>
+                <h4 class="overlay-description">Branding</h4>
+              </div>
+            </a>
+          </li>
+          <li class="work-page-grid-item">
+            <figure>
+              <img
+                src="assets/images/caroline-zhang-liminal-magazine-design.jpg"
+                alt="Describe your project"
+              />
+            </figure>
+            <a href="project-5.html">
+              <div class="overlay">
+                <h1 class="overlay-title">Liminal Magazine</h1>
+                <h4 class="overlay-description">Branding</h4>
+              </div>
+            </a>
+          </li>
+          <li class="work-page-grid-item">
+            <figure>
+              <img
+                src="assets/images/caroline-zhang-music-festival-branding-illustration-poster.jpg"
+                alt="Describe your project"
+              />
+            </figure>
+            <a href="project-6.html">
+              <div class="overlay">
+                <h1 class="overlay-title">D3ADME4T Music Festival</h1>
+                <h4 class="overlay-description">Illustration/Branding</h4>
+              </div>
+            </a>
+          </li>
         </ul>
       </section>
     </main>
