--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         </a>
       </div>
       <div class="holding-page-footer">
-        <p class="holding-page-copyright">
-          &copy; 2024-2026. Coded frantically by yours truly.
+        <p class="fineprint">
+          &copy; 2024-2026. Coded frantically by Caroline Zhang.
         </p>
       </div>
     </div>
