--- a/project-1.html
+++ b/project-1.html
@@ -190,7 +190,7 @@
       <li class="footer-item-4">
         <p><a href="#top">Smooth scroll to the top</a></p>
         <p class="fineprint">
-          &copy; 2024-2026. Coded frantically by yours truly.
+          &copy; 2024-2026. Coded frantically by Caroline Zhang.
         </p>
       </li>
     </ul>
