--- a/work.html
+++ b/work.html
@@ -246,7 +246,10 @@
     </div>
 
     <div class="flier">
-      <img src="assets/branding-images/floater.svg" alt="Describe your image" />
+      <img
+        src="assets/branding-images/mew-floater-maybe.png"
+        alt="Describe your image"
+      />
     </div>
 
     <script>
