--- a/blog.html
+++ b/blog.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Free Creative Portfolio Template: Oct 2024 Version | Blog Page</title>
+    <title>
+      Free Creative Portfolio Template: Oct 2024 Version | Blog Page
+    </title>
     <meta
       name="description"
-      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!" />
+      content="When writing a meta description, keep it between 140 and 160 characters so Google can display your entire message. Don’t forget to include your keyword!"
+    />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
 
@@ -26,14 +35,20 @@
       <aside class="project-aside">
         <div class="project-info">
           <h1 class="project-title">A Blog Post</h1>
-          <p class="project-description">A brief summary and/or contact details</p>
+          <p class="project-description">
+            A brief summary and/or contact details
+          </p>
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="project-1.html" class="navigation-arrow"><i class="fas fa-arrow-left fa-2x"></i></a>
+            <a href="project-1.html" class="navigation-arrow"
+              ><i class="fas fa-arrow-left fa-2x"></i
+            ></a>
           </li>
           <li class="arrow">
-            <a href="#" class="navigation-arrow"><i class="fas fa-arrow-right fa-2x"></i></a>
+            <a href="#" class="navigation-arrow"
+              ><i class="fas fa-arrow-right fa-2x"></i
+            ></a>
           </li>
         </ul>
       </aside>
@@ -43,19 +58,27 @@
           <h2>Heading 2</h2>
           <h3>Heading 3</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam ullamcorper lacus quis risus dignissim, vitae
-            fringilla massa vehicula. Sed fringilla laoreet dolor at mollis. Aliquam vitae turpis semper, porta est a,
-            vestibulum velit. Sed id rhoncus dui, ut pretium mi. Praesent suscipit, dolor ut fermentum facilisis, nulla
-            orci vestibulum lectus, sed placerat nisl turpis sed urna. Integer a nulla magna. Curabitur nec quam mollis,
-            ornare dolor vitae, auctor risus. Fusce tempus lectus at metus maximus, at sodales magna venenatis.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+            ullamcorper lacus quis risus dignissim, vitae fringilla massa
+            vehicula. Sed fringilla laoreet dolor at mollis. Aliquam vitae
+            turpis semper, porta est a, vestibulum velit. Sed id rhoncus dui, ut
+            pretium mi. Praesent suscipit, dolor ut fermentum facilisis, nulla
+            orci vestibulum lectus, sed placerat nisl turpis sed urna. Integer a
+            nulla magna. Curabitur nec quam mollis, ornare dolor vitae, auctor
+            risus. Fusce tempus lectus at metus maximus, at sodales magna
+            venenatis.
           </p>
 
           <p>
-            Nunc blandit euismod finibus. Praesent convallis ligula nec blandit pharetra. Praesent sodales egestas nibh,
-            eget ornare turpis egestas fringilla. Vivamus velit sapien, posuere et turpis eget, laoreet commodo sem.
-            Morbi molestie quis justo sit amet fringilla. Donec vel viverra elit, at eleifend neque. Nam id dui at ex
-            ullamcorper finibus. Aenean ac ante vel nibh venenatis hendrerit. Morbi condimentum accumsan lorem vel
-            luctus. Nullam molestie scelerisque nisl. Cras sed velit justo. Quisque ornare molestie purus non sodales.
+            Nunc blandit euismod finibus. Praesent convallis ligula nec blandit
+            pharetra. Praesent sodales egestas nibh, eget ornare turpis egestas
+            fringilla. Vivamus velit sapien, posuere et turpis eget, laoreet
+            commodo sem. Morbi molestie quis justo sit amet fringilla. Donec vel
+            viverra elit, at eleifend neque. Nam id dui at ex ullamcorper
+            finibus. Aenean ac ante vel nibh venenatis hendrerit. Morbi
+            condimentum accumsan lorem vel luctus. Nullam molestie scelerisque
+            nisl. Cras sed velit justo. Quisque ornare molestie purus non
+            sodales.
           </p>
           <ul>
             <li class="list-item">Apples</li>
@@ -69,21 +92,34 @@
       <li class="footer-item-1">
         <h2>About Me</h2>
         <p>
-          A highly customizable portfolio starter template with a big hero for your branding and intro. The work page is
-          based on
-          <a href="https://css-tricks.com/snippets/css/complete-guide-grid/" target="_blank">CSS Grid</a>
-          . The project page has a sticky sidebar. Beginngers can add their own logo,
-          <a href="https://fonts.google.com/" target="_blank">custom typography</a>
+          A highly customizable portfolio starter template with a big hero for
+          your branding and intro. The work page is based on
+          <a
+            href="https://css-tricks.com/snippets/css/complete-guide-grid/"
+            target="_blank"
+            >CSS Grid</a
+          >
+          . The project page has a sticky sidebar. Beginngers can add their own
+          logo,
+          <a href="https://fonts.google.com/" target="_blank"
+            >custom typography</a
+          >
           , custom colours, custom hover states, custom cursor, and more.
         </p>
         <p>
-          Customize the hero and footer. Make something randomly fly across the screen! Experiment with
-          <a href="https://mycolor.space/gradient" target="_blank">animated gradients</a>
+          Customize the hero and footer. Make something randomly fly across the
+          screen! Experiment with
+          <a href="https://mycolor.space/gradient" target="_blank"
+            >animated gradients</a
+          >
           ,
-          <a href="https://blobanimation.com/" target="_blank">animated blobs</a>
+          <a href="https://blobanimation.com/" target="_blank"
+            >animated blobs</a
+          >
           , animated GIFs, and
           <a href="https://www.svgator.com/" target="_blank">animated SVGs</a>
-          ! Add your own typewriter effect, parallax effect or custom effects and easter eggs! Consider adding a
+          ! Add your own typewriter effect, parallax effect or custom effects
+          and easter eggs! Consider adding a
           <a href="play.html">Play</a>
           page or
           <a href="resume.html">resume</a>
@@ -103,11 +139,23 @@
         <ul class="footer-nav-list">
           <li class="footer-nav-item"><a href="index.html">Holding Page</a></li>
           <li class="footer-nav-item"><a href="work.html">Work Page</a></li>
-          <li class="footer-nav-item"><a href="work-clean.html">Work Page (Clean Version)</a></li>
-          <li class="footer-nav-item"><a href="work-clean-flier.html">Work Page (Clean Version with Flier)</a></li>
-          <li class="footer-nav-item"><a href="work-grayscale.html">Work Page (Grayscale Filter)</a></li>
-          <li class="footer-nav-item"><a href="work-ghost.html">Work Page (Ghost Flying Icon)</a></li>
-          <li class="footer-nav-item"><a href="project-1.html">Project Page</a></li>
+          <li class="footer-nav-item">
+            <a href="work-clean.html">Work Page (Clean Version)</a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="work-clean-flier.html"
+              >Work Page (Clean Version with Flier)</a
+            >
+          </li>
+          <li class="footer-nav-item">
+            <a href="work-grayscale.html">Work Page (Grayscale Filter)</a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="work-ghost.html">Work Page (Ghost Flying Icon)</a>
+          </li>
+          <li class="footer-nav-item">
+            <a href="project-1.html">Project Page</a>
+          </li>
           <li class="footer-nav-item"><a href="about.html">About</a></li>
         </ul>
       </li>
@@ -122,14 +170,14 @@
       <li class="footer-item-4">
         <p><a href="#top">Smooth scroll to the top</a></p>
         <p class="fineprint">
-          &copy; 2020-2024. Hand crafted with
-          <span class="heart">❤</span>
-          by James Neufeld.
+          &copy; 2024-2026. Coded frantically by Caroline Zhang.
         </p>
       </li>
     </ul>
 
-    <div id="myID" class="bottomMenu hide"><a href="project-1.html">Previous Project</a></div>
+    <div id="myID" class="bottomMenu hide">
+      <a href="project-1.html">Previous Project</a>
+    </div>
 
     <script type="text/javascript">
       myID = document.getElementById("myID");
