floater and footer about

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
         </p>
         <p>
           My interests are vast and varied but my one true love is video games.
-          I go from grinding at work to grinding levels virtually so efficiency
+          I go from grinding at work to grinding levels virtually and efficiency
           is my key to success. I live next to computers so feel free to reach
           out and I’ll get back to you as soon as I can (after one more game).
         </p>
