--- a/project-5.html
+++ b/project-5.html
@@ -92,16 +92,18 @@
     <ul class="global-footer">
       <li class="footer-item-1">
         <h2>About Me</h2>
-        <p>
+        <p class="about-desc">
           Hi there, I’m Caroline, a graphic designer and overall big thinker
           based in Vancouver. Right now I’m a third year student in the IDEA
           School of Design with a focus on branding and a smattering of
-          illustration. Research and analysis is where I feel at home—if you’ve
-          got a question or a problem I’m your guy. My interests are as vast and
-          varied but my one true love is video games. I go from grinding at work
-          to grinding levels virtually so efficiency is my key to success. I
-          live next to computers so feel free to reach out and I’ll get back to
-          you as soon as I can (after one more game).
+          illustration and UX. Research and analysis is where I feel at home—if
+          you’ve got a question or a problem I’m your guy.
+        </p>
+        <p>
+          My interests are vast and varied but my one true love is video games.
+          I go from grinding at work to grinding levels virtually and efficiency
+          is my key to success. I live next to computers so feel free to reach
+          out and I’ll get back to you as soon as I can (after one more game).
         </p>
       </li>
       <li class="footer-item-2">
