--- a/index.html
+++ b/index.html
@@ -26,10 +26,7 @@
       <div class="holding-page-inner-container">
         <a href="work.html">
           <figure class="holding-page-animation">
-            <img
-              src="assets/images/swadloon.gif"
-              alt="Portfolio Website Launching Soon"
-            />
+            <img src="assets/images/swadloon.gif" alt="Portfolio Incoming!!" />
           </figure>
           <h1 class="holding-page-title">
             Caroline Zhang's portfolio incoming
@@ -37,7 +34,7 @@
         </a>
       </div>
       <div class="holding-page-footer">
-        <p class="fineprint">
+        <p class="fineprint-index">
           &copy; 2024-2026. Coded frantically by Caroline Zhang.
         </p>
       </div>
