changed order and photos

--- a/work.html
+++ b/work.html
@@ -87,8 +87,37 @@
           <li class="work-page-grid-item">
             <figure>
               <img
+                src="assets/images/caroline-zhang-foundry-rebrand-poster-design-mockup.jpg"
+                alt="Bus shelter ad for mental health and social resource Foundry BC."
+              />
+            </figure>
+            <a href="project-4.html">
+              <div class="overlay">
+                <h1 class="overlay-title">Foundry Refresh</h1>
+                <h4 class="overlay-description">Brand Strategy</h4>
+              </div>
+            </a>
+          </li>
+          <li class="work-page-grid-item">
+            <figure>
+              <img
+                src="assets/images/caroline-zhang-liminal-magazine-design.jpg"
+                alt="Liminal branded magazine cover and page set in a cafe."
+              />
+            </figure>
+            <a href="project-5.html">
+              <div class="overlay">
+                <h1 class="overlay-title">Liminal Magazine</h1>
+                <h4 class="overlay-description">Branding/Photography</h4>
+              </div>
+            </a>
+          </li>
+
+          <li class="work-page-grid-item">
+            <figure>
+              <img
                 src="assets/images/caroline-zhang-chinese-national-luxury-bag-design.jpg"
-                alt="bag design featuring references to Chinese seal stamps built to represent the nation"
+                alt="Bag design featuring references to Chinese seal stamps built to represent the nation."
               />
             </figure>
             <a href="project-1.html">
@@ -101,8 +130,23 @@
           <li class="work-page-grid-item">
             <figure>
               <img
+                src="assets/images/caroline-zhang-bubble-tea-drink-can-design-transit-advertisement-campaign.jpg"
+                alt="Transit ad for a bubble tea drink with personified boba pearls squished together."
+              />
+            </figure>
+            <a href="project-3.html">
+              <div class="overlay">
+                <h1 class="overlay-title">Boba Packaging</h1>
+                <h4 class="overlay-description">Branding</h4>
+              </div>
+            </a>
+          </li>
+
+          <li class="work-page-grid-item">
+            <figure>
+              <img
                 src="assets/images/caroline-zhang-keycap-packaging-design-photography.jpg"
-                alt="keycap packaging design for a marginalized-gender only internet cafe "
+                alt="Keycap packaging design for a marginalized-gender only internet cafe."
               />
             </figure>
             <a href="project-2.html">
@@ -115,50 +159,8 @@
           <li class="work-page-grid-item">
             <figure>
               <img
-                src="assets/images/caroline-zhang-bubble-tea-drink-can-design-transit-advertisement-campaign.jpg"
-                alt="Describe your project"
-              />
-            </figure>
-            <a href="project-3.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Boba Packaging</h1>
-                <h4 class="overlay-description">Branding</h4>
-              </div>
-            </a>
-          </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="assets/images/caroline-zhang-foundry-rebrand-poster-design-mockup.jpg"
-                alt="Describe your project"
-              />
-            </figure>
-            <a href="project-4.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Foundry Refresh</h1>
-                <h4 class="overlay-description">Branding</h4>
-              </div>
-            </a>
-          </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img
-                src="assets/images/caroline-zhang-liminal-magazine-design.jpg"
-                alt="Describe your project"
-              />
-            </figure>
-            <a href="project-5.html">
-              <div class="overlay">
-                <h1 class="overlay-title">Liminal Magazine</h1>
-                <h4 class="overlay-description">Branding</h4>
-              </div>
-            </a>
-          </li>
-          <li class="work-page-grid-item">
-            <figure>
-              <img
                 src="assets/images/caroline-zhang-music-festival-branding-illustration-poster.jpg"
-                alt="Describe your project"
+                alt="Bus shelter ad for the D3ADME4T music festival. The dog girl mascot is pulling her mouth open and showing her grimace."
               />
             </figure>
             <a href="project-6.html">
