--- a/work.html
+++ b/work.html
@@ -91,7 +91,7 @@
                 alt="Bus shelter ad for mental health and social resource Foundry BC."
               />
             </figure>
-            <a href="project-4.html">
+            <a href="foundry-refresh.html">
               <div class="overlay">
                 <h1 class="overlay-title">Foundry Refresh</h1>
                 <h4 class="overlay-description">Brand Strategy</h4>
@@ -105,7 +105,7 @@
                 alt="Liminal branded magazine cover and page set in a cafe."
               />
             </figure>
-            <a href="project-5.html">
+            <a href="liminal.html">
               <div class="overlay">
                 <h1 class="overlay-title">Liminal Magazine</h1>
                 <h4 class="overlay-description">Branding/Photography</h4>
@@ -120,7 +120,7 @@
                 alt="Bag design featuring references to Chinese seal stamps built to represent the nation."
               />
             </figure>
-            <a href="project-1.html">
+            <a href="chinese-national-bag.html">
               <div class="overlay">
                 <h1 class="overlay-title">Chinese national bag</h1>
                 <h4 class="overlay-description">Branding</h4>
@@ -134,7 +134,7 @@
                 alt="Transit ad for a bubble tea drink with personified boba pearls squished together."
               />
             </figure>
-            <a href="project-3.html">
+            <a href="bocha.html">
               <div class="overlay">
                 <h1 class="overlay-title">Boba Packaging</h1>
                 <h4 class="overlay-description">Branding</h4>
@@ -149,7 +149,7 @@
                 alt="Keycap packaging design for a marginalized-gender only internet cafe."
               />
             </figure>
-            <a href="project-2.html">
+            <a href="queue.html">
               <div class="overlay">
                 <h1 class="overlay-title">Queue Packaging</h1>
                 <h4 class="overlay-description">Branding</h4>
@@ -163,7 +163,7 @@
                 alt="Bus shelter ad for the D3ADME4T music festival. The dog girl mascot is pulling her mouth open and showing her grimace."
               />
             </figure>
-            <a href="project-6.html">
+            <a href="d3adme4t.html">
               <div class="overlay">
                 <h1 class="overlay-title">D3ADME4T Music Festival</h1>
                 <h4 class="overlay-description">Illustration/Branding</h4>
