--- a/chinese-national-bag.html
+++ b/chinese-national-bag.html
@@ -62,10 +62,13 @@
         <div class="project-info">
           <h1 class="project-title">Chinese National Bag Design</h1>
           <p class="project-description">
-            A luxury bag made to represent the nation of China, challenging the
-            notion that "Made in China" means poor quality. The use of seal
-            stamps and texture harken to the rich trade and art culture found in
-            Chinese history.
+            For an assignemnt asking to design a bag that represents a nation, I
+            wanted to do something more intentional and meaningful for the
+            chosen nation. Referencing my personal heritage, I decided to make a
+            luxury bag that represents the nation of China. I wanted to
+            challenge the stereotypical notion that "Made in China" means cheap
+            production and poor quality. The use of seal stamps and texture
+            harken to the rich trade and art culture found in Chinese history.
           </p>
           <p class="project-description">
             Originally seal stamps were a method for powerful people to sign off
