d3adme4t text and main image

--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -60,19 +60,46 @@
     <div class="project-wrapper">
       <aside class="project-aside">
         <div class="project-info">
-          <h1 class="project-title">Project Three</h1>
+          <h1 class="project-title">D3ADME4T MUSIC FESTIVAL</h1>
           <p class="project-description">
-            A brief description of your project goes here.
+            WE ARE ALL D3ADME4T WE ARE ALL D3ADME4T WE ARE ALL D3ADME4T
+          </p>
+          <p class="project-description">
+            Deviants and freaks of all kinds, welcome to the D3ADME4T digital
+            hardcore music festival!! For those not in the know, modern digital
+            hardcore is the culmination of several internet aged music
+            microgenres. Some of which are internetcore/webcore, hyperpop,
+            glitchcore, breakcore, and more. Don't be scared, our beloved
+            mascot, also named D3ADME4T, will guide you through all of this
+            noise.
+          </p>
+          <p class="project-description">
+            The D3ADME4T music festival lives both online and in-person. The
+            illustrated series of 3 print ads line the streets alongside a
+            digital takeover activation in collaboration with Spotify.
+          </p>
+          <p class="project-description">
+            A separate social media campaign has been developed to bring
+            additional attention to the festival and, more importantly, to
+            connect and facilitate the online community who enjoys digital
+            hardcore music. The "_ is D3ADME4T" campaign provides resources and
+            inspiration to encourage audiences to express themselves both
+            creatively and emotionally. The facetious copy points out the
+            illogical aggravators in the modern landscape, as well as attacks
+            against individuals' beings.
+          </p>
+          <p class="project-description">
+            Please enjoy, and remember-WE ARE ALL D3ADME4T
           </p>
         </div>
         <ul class="project-navigation">
           <li class="arrow">
-            <a href="project-1.html" class="navigation-arrow"
+            <a href="queue.html" class="navigation-arrow"
               ><i class="fas fa-arrow-left fa-2x"></i
             ></a>
           </li>
           <li class="arrow">
-            <a href="#" class="navigation-arrow"
+            <a href="foundry-refresh.html" class="navigation-arrow"
               ><i class="fas fa-arrow-right fa-2x"></i
             ></a>
           </li>
@@ -81,8 +108,8 @@
       <main class="project-details">
         <div class="project-image">
           <img
-            src="assets/images/caroline-zhang-bubble-tea-drink-can-design-transit-advertisement-campaign.jpg"
-            width="1000"
+            src="assets/images/caroline-zhang-d3adme4t-illustrated-poster-series.jpg"
+            width="1500"
             height="1000"
             alt="A description of the image"
           />
