--- a/chinese-national-bag.html
+++ b/chinese-national-bag.html
@@ -68,20 +68,21 @@
             luxury bag that represents the nation of China. I wanted to
             challenge the stereotypical notion that "Made in China" means cheap
             production and poor quality. The use of seal stamps and texture
-            harken to the rich trade and art culture found in Chinese history.
+            harken to the rich trade and art culture found throughout Chinese
+            history.
           </p>
           <p class="project-description">
             Originally seal stamps were a method for powerful people to sign off
             on documents. As this practice became more prevalant, art collectors
             would stamp pieces they procure. The number of stamps on a piece
-            became a symbol of its value and artistic merit.
+            thus became a symbol of its value and artistic merit.
           </p>
           <p class="project-description">
             The characters making up the stamps represent the various Chinese
             dynasties. Each dynasty came with it's own set of innovations in
             both the art and technology fields. By combining the dynasty names
-            with seal stamps, I wanted to redefine what "Made in China" really
-            means.
+            with seal stamps, I wanted to redefine "Made in China" to represent
+            the history, innovatio, and artistic merit of the nation.
           </p>
         </div>
         <ul class="project-navigation">
