added poster photos

--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -111,7 +111,31 @@
             src="assets/images/caroline-zhang-d3adme4t-illustrated-poster-series.jpg"
             width="1500"
             height="1000"
-            alt="A description of the image"
+            alt="Series of 3 posters for the D3ADME4T music festival."
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/images/caroline-zhang-d3adme4t-music-festival-illustrated-poster-1.jpg"
+            width="500"
+            height="1050"
+            alt="poster for the D3ADME4T music festival."
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/images/caroline-zhang-d3adme4t-music-festival-illustrated-poster-2.jpg"
+            width="500"
+            height="1050"
+            alt="poster for the D3ADME4T music festival."
+          />
+        </div>
+        <div class="project-image">
+          <img
+            src="assets/images/caroline-zhang-d3adme4t-music-festival-illustrated-poster-3.jpg"
+            width="500"
+            height="1050"
+            alt="poster for the D3ADME4T music festival."
           />
         </div>
       </main>
