--- a/d3adme4t.html
+++ b/d3adme4t.html
@@ -114,6 +114,38 @@
             alt="Series of 3 posters for the D3ADME4T music festival."
           />
         </div>
+        <div style="padding: 56.25% 0 0 0; position: relative">
+          <iframe
+            src="https://player.vimeo.com/video/1070558324?h=504f914e7f&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+            frameborder="0"
+            allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"
+            style="
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+            "
+            title="Sequence 01_1_1"
+          ></iframe>
+        </div>
+        <script src="https://player.vimeo.com/api/player.js"></script>
+        <div style="padding: 56.25% 0 0 0; position: relative">
+          <iframe
+            src="https://player.vimeo.com/video/1070558340?h=55af81d262&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479"
+            frameborder="0"
+            allow="autoplay; fullscreen; picture-in-picture; clipboard-write; encrypted-media"
+            style="
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+            "
+            title="Sequence 01_1"
+          ></iframe>
+        </div>
+        <script src="https://player.vimeo.com/api/player.js"></script>
         <div class="project-image">
           <img
             src="assets/images/caroline-zhang-d3adme4t-music-festival-illustrated-poster-1.jpg"
@@ -131,12 +163,17 @@
           />
         </div>
         <div class="project-image">
-          <img
-            src="assets/images/caroline-zhang-d3adme4t-music-festival-illustrated-poster-3.jpg"
-            width="500"
-            height="1050"
-            alt="poster for the D3ADME4T music festival."
-          />
+          <figure>
+            <img
+              src="assets/images/caroline-zhang-d3adme4t-music-festival-illustrated-poster-3.jpg"
+              width="500"
+              height="1050"
+              alt="poster for the D3ADME4T music festival."
+            />
+            <figcaption class="caption">
+              Please note, pixelization is intentional!
+            </figcaption>
+          </figure>
         </div>
       </main>
     </div>
